2017-05-29  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* geometry.test: Require at least Tcl 8.5
	* numtheory.man: Add description of Jacobi symbol
	* primes.tcl: Add Jacobi symbol
	* primes.test: Add tests for Jacobi symbol

2017-05-28  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* numtheory.tcl: Source primes.tcl at the end, version now 1.1
	* primes.tcl: Additonal procedures for the number theory package, includes estimates of number of primes
	              and factors (tickets 1be9ea99c9b76c8ffeff3edfb73671309bf657e8 and 734dd2ae5c89319a3b8579e48d581f9d0a3da4f4)
	* numtheory.man: Document additional procedures
	* primes.test: Tests for additional procedures
	* linalg.tcl: Correction of [conforming] procedure (ticket 776a75f14f53b5c9a06fe3f3892485a6efe1dc20)
	* linalg.test: Added tests for the [conforming] procedure
	* pkgIndex.tcl: Bumped version of numtheory to 1.1, linearalgebra to 1.1.6

2017-01-17  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* statistics.test: Add tests for test-Tukey-range and test-Dunnett
	* statistics.tcl: Add two procedures, test-Tukey-range and test-Dunnett, and auxiliary code
	* statistics.man: Describe the two new procedures
	* pkgIndex.tcl: Bumped version of the statistics module to 1.1.0

2017-01-10  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* statistics.test: Correct the tests for the test-anova-F procedure
	* statistics.tcl: Correct the namespace for the test-anova-F procedure and the comment
	* statistics.man: Correct the description of the test-anova-F procedure
	* linalg.test: Correct test solve-1.6 regarding permuted matrices
	* geometry.test: Add a simple definition of lmap for older versions of Tcl (notably 8.5)
	* interpolate.test: Correct test Interpolate-1.3 - missing keyword -result and use of existing table name

2016-08-16  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* pdf_stat.tcl: Correct the use of the argument for standard deviation, affects pdf-lognormal and cdf-lognormal